<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_penjualan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_penjualan" />
        <item
            android:id="@+id/nav_laporan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_laporan" />
        <item
            android:id="@+id/nav_pengaturan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_pengaturan" />
        <item
            android:id="@+id/nav_logout_pegawai"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout_pegawai" />

        <item
            android:id="@+id/nav_logout_toko"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_logout_toko" />
    </group>
</menu>