<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.itb.aplikasitoko.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_penjualan"
        android:name="com.itb.aplikasitoko.ui.penjualan.PenjualanFragment"
        android:label="@string/menu_penjualan"
        tools:layout="@layout/fragment_penjualan" />

    <fragment
        android:id="@+id/nav_laporan"
        android:name="com.itb.aplikasitoko.ui.laporan.LaporanFragment"
        android:label="@string/menu_laporan"
        tools:layout="@layout/fragment_laporan" />

    <fragment
        android:id="@+id/nav_pengaturan"
        android:name="com.itb.aplikasitoko.ui.pengaturan.PengaturanFragment"
        android:label="@string/menu_pengaturan"
        tools:layout="@layout/fragment_pengaturan" />

    <fragment
        android:id="@+id/nav_logout_toko"
        android:name="com.itb.aplikasitoko.ui.logout.LogoutToko"
        android:label="@string/menu_logout_toko" />

    <fragment
        android:id="@+id/nav_logout_pegawai"
        android:name="com.itb.aplikasitoko.ui.logout.LogoutPegawai"
        android:label="@string/menu_logout_pegawai" />
</navigation>